office-kubernetes/kustomize/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        runAsGroup: 0
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: nfs-jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-iscsi
        - name: nfs-jellyfin-shows
          nfs:
            server: 192.168.240.112
            path: /mnt/main_pool/private/media/shows
        - name: nfs-jellyfin-movies
          nfs:
            server: 192.168.240.112
            path: /mnt/main_pool/private/media/movies
      containers:
      - image: ghcr.io/linuxserver/jellyfin
        imagePullPolicy: Always
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http-tcp
          protocol: TCP
        - containerPort: 8920
          name: https-tcp
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 7359
          name: discovery-udp
          protocol: UDP      
        readinessProbe:
            httpGet:
              path: /health
              port: http-tcp
        volumeMounts:
        - mountPath: /config
          name: nfs-jellyfin-config
        - mountPath: /movies
          name: nfs-jellyfin-movies
        - mountPath: /shows
          name: nfs-jellyfin-shows
