office-kubernetes/kustomize/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8096
      protocol: TCP
  selector:
    app: jellyfin
