office-kubernetes/kustomize/jellyfin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
  - name: web
    namespace: gateway-system
  hostnames:
    - "jellyfin.k8s.local-k8s.tech"
  rules:
    - backendRefs:
      - name: jellyfin
        port: 80
